--- a/contactDetails.html
+++ b/contactDetails.html
@@ -22,7 +22,7 @@
     </p>
     <hr size="1" color="black" />
     <form
-      action="mailto:samantaarumita@gmail.com"
+      action="mailto:arghakamal25@gmail.com"
       method="post"
       enctype="text/plain"
     >
